# AEVIX

./: .gitignore  AEVIX_DECISIONS.md  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  PROJECT_ROADMAP.md  README.md  RESEARCH_GUIDE.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
configs/: base.yaml  development.yaml  distributed.yaml  production.yaml  testing.yaml
dashboard/: README.md  __init__.py
dashboard/api/: __init__.py  contracts.py
dashboard/backend/: pyproject.toml
dashboard/backend/src/dashboard_backend/: __init__.py  app.py  main.py
dashboard/backend/src/dashboard_backend/api/: __init__.py  contracts.py  dependencies.py  router.py
dashboard/backend/src/dashboard_backend/api/v1/: __init__.py  auth.py  dashboard.py  health.py  websocket.py
dashboard/backend/src/dashboard_backend/core/: __init__.py  logging.py  security.py  settings.py  websocket.py
dashboard/backend/tests/: conftest.py  test_app.py
dashboard/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
dashboard/frontend/src/: App.tsx  styles.css
docs/: README.md
research/: README.md
scripts/: validate_project.py
src/aevix/: __init__.py
src/aevix/config/: __init__.py  loader.py
src/aevix/core/: __init__.py  base.py
src/aevix/evaluation/: __init__.py  base.py
src/aevix/exceptions/: __init__.py  base.py
src/aevix/interfaces/: __init__.py  contracts.py
src/aevix/logging/: __init__.py  config.py
src/aevix/models/: __init__.py  base.py
src/aevix/registry/: __init__.py  registry.py
src/aevix/tokenizer/: __init__.py  base.py
src/aevix/training/: __init__.py  base.py
tests/: conftest.py
tests/integration/: test_foundation_stack.py
tests/unit/: test_config_loader.py  test_logging.py  test_registry.py
(+28 files in other folders)
